--- a/milestone_1_intermediate_javascript_&_api/module_5_api_recap_with_english_janala/assets/css/main.css
+++ b/milestone_1_intermediate_javascript_&_api/module_5_api_recap_with_english_janala/assets/css/main.css
@@ -15,6 +15,11 @@
   font-family: "Instrument Serif", serif;
 }
 
+::selection{
+  background: #000;
+  color: #f2f2f2;
+}
+
 body {
   font-family: "Instrument Serif", serif;
   width: 100%;
