feat: 5-7 Highlight Active Lesson and Integrate DaisyUI Modal

--- a/milestone_1_intermediate_javascript_&_api/module_5_api_recap_with_english_janala/assets/css/main.css
+++ b/milestone_1_intermediate_javascript_&_api/module_5_api_recap_with_english_janala/assets/css/main.css
@@ -15,7 +15,7 @@
   font-family: "Instrument Serif", serif;
 }
 
-::selection{
+::selection {
   background: #000;
   color: #f2f2f2;
 }
@@ -35,6 +35,11 @@ button {
 
 input {
   outline: none;
+}
+
+.lesson_btn_acive {
+  background: #222;
+  color: #f2f2f2;
 }
 
 @layer components {
