feat: 8-4 Explore JSX and Props basics

--- a/milestone_2_introduction_to_simple_react/module_8_react_core_concept_part_1/explore_core_react/src/index.css
+++ b/milestone_2_introduction_to_simple_react/module_8_react_core_concept_part_1/explore_core_react/src/index.css
@@ -66,3 +66,10 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+.student {
+  padding: 16px;
+  border: 1px solid white;
+  border-radius: 8px;
+  margin-block: 16px;
+}
